Adjusts some alignment issues

--- a/wp-content/themes/csweek/style.css
+++ b/wp-content/themes/csweek/style.css
@@ -1006,18 +1006,19 @@ a.save-the-date{
   border: 1px solid red !important;
 }
 
-#menu{
-  position: relative;
-  top: -50px !important;
-  padding: 0 5px;
-  margin: 40px 0 0;
-  z-index: 1000;
-  float: left;
-  width: 100%;
-  clear: both;
+.menu-container{
   background: #333;
   border-top: 1px solid #666;
   border-bottom: 1px solid #666;
+  position: relative;
+  z-index: 1000;
+}
+
+#menu{
+  float: left;
+  width: 100%;
+  clear: both;
+  margin: 0;
 }
 
 #menu .sub-menu{
@@ -1099,11 +1100,10 @@ a.save-the-date{
 }
 
 #welcome{
-  padding-top: 90px;
-  border-top: 2px solid #555;
+  padding-top: 40px;
   background-color: #333;
   border-bottom: 3px solid #555;
-  padding-bottom: 90px;
+  padding-bottom: 70px;
 }
 
 #welcome h2, #page h2{
@@ -1363,7 +1363,10 @@ a.save-the-date{
 
 .list{
   float: left;
-  width: 31%
+  width: 31%;
+  list-style-position: inside;
+  margin: auto 0;
+  padding: 20px 0;
 }
 
 #contact h2{
@@ -2073,6 +2076,11 @@ RESPONSIVE
   .jumbotron h1 .where, .jumbotron h1 .year {
     font-size: 38px;
     line-height: 66px;
+  }
+
+  .list{
+    float: none;
+    width: auto;
   }
 }
 
